@@ -1,3 +1,12 @@
+2014-08-21  Ryuan Choi  <ryuan.choi@samsung.com>
+
+        Unreviewed build fix when RUBBER_BANDING is not enabled.
+
+        * rendering/RenderLayer.cpp:
+        (WebCore::RenderLayer::overhangAmount):
+        (WebCore::RenderLayer::setHasHorizontalScrollbar):
+        (WebCore::RenderLayer::setHasVerticalScrollbar):
+
 2014-08-21  Brent Fulgham  <bfulgham@apple.com>
 
         [Win] WebCore.proj is not copying WebKit resource files.
